# simple-raytracer

./: .gitignore  CMakeLists.txt  main.cpp  raytracer.cpp  raytracer.h  voxelizer.cpp
geometry/: color.h  orthonormalbasis.h  ray.h  vec3.h
io/: stl.h
materials/: dielectric.h  diffuse_light.h  lambertian.h  material.h  metal.h
objects/: camera.h  directional_light.h  flip_face.h  hittable.h  hittable_list.h  light.h  mesh.h  plane.h  point_light.h  scene.h  sphere.h  triangle.h  xy_plane.h
octree/: octree.cpp  octree.h  voxel.h
octree/boolean_operations/: boolean_operations.cpp  boolean_operations.h
octree/primitives/: block.h  cone.h  cylinder.h  solid.h  sphere.h
sampling/: cosine_pdf.h  hittable_pdf.h  mix_pdf.h  pdf.h
ui/: canvas.cpp  canvas.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  tree_item.h  tree_model.cpp  tree_model.h
ui/camera/: flycamera.cpp  flycamera.h
utils/: raycolor.h  utility.h
